k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fortune-cookie-backend-deployment
  name: fortune-cookie-backend-service
spec:
  ports:
    - port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app: fortune-cookie-backend-deployment
  type: NodePort
