k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fortune-cookie-frontend-deployment
  name: fortune-cookie-frontend-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: fortune-cookie-frontend-deployment
  type: NodePort
